fix: text not wrapping properly on smaller screens

--- a/public/style.css
+++ b/public/style.css
@@ -146,7 +146,6 @@ body {
 
   &.error {
     min-height: 100vh;
-    /* overflow: hidden; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -308,6 +307,11 @@ main {
   font-weight: 900;
 }
 
+.user-name,
+.message {
+  overflow-wrap: anywhere;
+}
+
 .user-name {
   font-size: 1.2rem;
   font-weight: 600;
@@ -322,7 +326,6 @@ main {
 .message {
   font-size: 1.1rem;
   font-weight: 500;
-  word-break: break-word;
 }
 
 .hearts {
